# fishui

./: CMakeLists.txt
debian/: control  fishui.postinst  fishui.postrm  rules
src/: CMakeLists.txt  newiconitem.cpp  newiconitem.h  qqmlsortfilterproxymodel.cpp  qqmlsortfilterproxymodel.h
src/controls/: AboutDialog.qml  ActionTextField.qml  BusyIndicator.qml  DesktopMenu.qml  Dialog.qml  Icon.qml  PopupTips.qml  RoundImageButton.qml  RoundedRect.qml  TabBar.qml  TabButton.qml  TabCloseButton.qml  TabView.qml  TextField.qml  Theme.qml  Toast.qml  Units.qml  Window.qml  qmldir
src/fish-style/: ApplicationWindow.qml  Button.qml  CheckBox.qml  CheckIndicator.qml  ComboBox.qml  Control.qml  Dialog.qml  DialogButtonBox.qml  Frame.qml  Label.qml  Menu.qml  MenuItem.qml  MenuSeparator.qml  Page.qml  RadioButton.qml  RadioDelegate.qml  RadioIndicator.qml  ScrollBar.qml  Slider.qml  StackView.qml  Switch.qml  SwitchIndicator.qml  TabBar.qml  TabButton.qml  TextArea.qml  TextField.qml  ToolTip.qml  qmldir
